test/corpus/channel_operations.txt
==================
Channel from operation
==================

Channel.from(1, 2, 3)

---

(source_file
  (channel_expression
    (channel_from
      (number)
      (number)
      (number))))

==================
Channel value operation
==================

Channel.value('Hello')

---

(source_file
  (channel_expression
    (channel_value
      (string))))

==================
Channel pipe operation
==================

Channel.from(1, 2, 3) | map { it * 2 }

---

(source_file
  (pipe_expression
    (channel_expression
      (channel_from
        (number)
        (number)
        (number)))
    (map_operation
      (closure
        (identifier)
        (number)))))

==================
Channel of operation
==================

Channel.of('a', 'b', 'c')

---

(source_file
  (channel_expression
    (channel_of
      (string)
      (string)
      (string))))

==================
Channel with dynamic strings
==================

Channel.of("Hello ${name}", """Multi
line ${text}""")

---

(source_file
  (channel_expression
    (channel_of
      (string)
      (string))))

==================
Channel with list input
==================

Channel.fromList(['a', 'b', 'c'])

---

(source_file
  (channel_expression
    (channel_from_list
      (list
        (string)
        (string)
        (string)))))

==================
Channel with map input
==================

Channel.value([foo: 'bar', baz: 'qux'])

---

(source_file
  (channel_expression
    (channel_value
      (map
        (map_entry
          (identifier)
          (string))
        (map_entry
          (identifier)
          (string))))))
