test/corpus/declarations.txt
==================
Basic declarations
==================

#!/usr/bin/env nextflow

nextflow.preview.topic = true

include { foo, bar as baz } from './some/module'

params.message = 'Hello world!'

---

(source_file
  (shebang)
  (feature_flag
    (identifier)
    (identifier)
    (boolean))
  (include
    (include_item
      (identifier))
    (include_item
      (identifier)
      (identifier))
    (string))
  (parameter
    (identifier)
    (string)))

==================
Comments
==================

// This is a line comment
/* This is a 
   block comment */

---

(source_file
  (comment)
  (comment))

==================
Process definition
==================

process FASTQC {
    input:
    path reads from input_ch;
    
    output:
    path "fastqc_*" into fastqc_ch;
    
    script:
    """fastqc $reads"""
}

==================
Channel operations
==================

Channel.from(1,2,3) | map { it * 2 }
Channel.value('Hello')
Channel.of('a', 'b', 'c')

---

(source_file
  (process_definition
    (identifier)
    (input_block
      (input_declaration
        (identifier)
        (identifier)))
    (output_block
      (output_declaration
        (string)
        (identifier)))
    (script_block
      (script_content)))
  (pipe_expression
    (channel_expression
      (channel_from
        (number)
        (number)
        (number)))
    (identifier))
  (channel_expression
    (channel_value
      (string)))
  (channel_expression
    (channel_of
      (string)
      (string)
      (string))))
